# overview

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Core/: CMakeLists.txt  EventBase.cpp  EventBase.hpp  FileStreamBuf.cpp  FileStreamBuf.hpp  JsonUtilities.cpp  JsonUtilities.hpp  Message.hpp  Message.inl  MessageDispatchTable.cpp  MessageDispatchTable.hpp  MessageDispatchTable.inl  MessageDispatcher.cpp  MessageDispatcher.hpp  MessageQueue.cpp  MessageQueue.hpp  ObjectPool.hpp  StreamBufRapidJson.hpp  ValueConvertGLM.hpp
Core/SDO/: Base.hpp
Engine/: AABB.cpp  AABB.hpp  Asset.cpp  Asset.hpp  AssetLoader.cpp  AssetLoader.hpp  AssetManifest.cpp  AssetManifest.hpp  AssetManifestFactory.hpp  AssetManifestLoader.cpp  AssetManifestLoader.hpp  BitmapDatabaseLoader.hpp  CMakeLists.txt  Component.hpp  Component.inl  ComponentData.cpp  ComponentData.hpp  ComponentData.inl  Controller.cpp  Controller.hpp  Debug.hpp  Defines.hpp  Director.hpp  Engine.hpp  EngineGeometry.cpp  EngineGeometry.hpp  EngineMath.cpp  EngineMath.hpp  EngineMathGfx.cpp  EngineMathGfx.hpp  EngineMathTypes.hpp  EngineTypes.cpp  EngineTypes.hpp  EntityDatabase.cpp  EntityDatabase.hpp  EntityDefs.hpp  EntityStoreDictionary.cpp  EntityStoreDictionary.hpp  EntityTransform.cpp  EntityTransform.hpp  (+64 more)
Engine/BVH/: AABBTree.hpp  AABBTypes.hpp  BVHBoxTest.hpp  BVHFrustrumTest.hpp  BVHRayTest.hpp  BVHStaticGraph.hpp  BVHTypes.hpp  Octree.hpp
Engine/Builder/: Block.cpp  Block.hpp  BlockCollection.cpp  BlockCollection.hpp  BlockCollectionLoader.cpp  BlockCollectionLoader.hpp  BlockLibrary.hpp  Builder.cpp  Builder.hpp  BuilderTypes.hpp  GridBuilder.cpp  GridBuilder.hpp  RoomBuilder.cpp  RoomBuilder.hpp
Engine/Comp/: Components.cpp  Transform.cpp  Transform.hpp
Engine/Component/: UIComponentImpl.hpp  UIWindowImpl.hpp
Engine/Controller/: ControllerTypes.cpp  ControllerTypes.hpp  NavBody.cpp  NavBody.hpp  NavBodyTransform.hpp  NavSystem.cpp  NavSystem.hpp  TransformBody.cpp  TransformBody.hpp  TransformSet.cpp  TransformSet.hpp  TransformSystem.cpp  TransformSystem.hpp
Engine/Entity/: Components.cpp  DataRowset.cpp  DataRowset.hpp  EntityDataTable.cpp  EntityDataTable.hpp  EntityDatabase.cpp  EntityDatabase.hpp  EntityFactory.cpp  EntityFactory.hpp  EntityGroup.cpp  EntityGroup.hpp  EntityGroupMap.cpp  EntityGroupMap.hpp  EntityObject.cpp  EntityObject.hpp  EntityStore.cpp  EntityStore.hpp  EntityTemplate.cpp  EntityTemplate.hpp  EntityTemplateCollection.cpp  EntityTemplateCollection.hpp  EntityTemplateCollectionLoader.cpp  EntityTemplateCollectionLoader.hpp  EntityTypes.cpp  EntityTypes.hpp  TransformEntity.cpp  TransformEntity.hpp
Engine/Game/: NavSceneBodyTransform.cpp  NavSceneBodyTransform.hpp
Engine/Graphs/: BVHGraph.cpp  BVHGraph.hpp  BVHTypes.hpp  Octree.hpp
Engine/Messages/: Core.cpp  Core.hpp  Entity.hpp  Scene.hpp
Engine/Model/: AABB.cpp  AABB.hpp  BitmapDatabaseLoader.hpp  Block.cpp  Block.hpp  BlockCollection.cpp  BlockCollection.hpp  BlockCollectionLoader.cpp  BlockCollectionLoader.hpp  BlockLibrary.hpp  Entity.cpp  Entity.hpp  EntityTypes.hpp  Map.cpp  Map.hpp  MapTypes.hpp  ModelCollection.hpp  ModelCollectionLoader.cpp  ModelCollectionLoader.hpp  ModelLibrary.hpp  ModelTypes.hpp  QuadTree.hpp  Room.cpp  Room.hpp  Room.inl  RoomGraph.cpp  RoomGraph.hpp  RoomTypes.hpp  Sprite.hpp  SpriteCollection.cpp  SpriteCollection.hpp  SpriteCollectionLoader.cpp  SpriteCollectionLoader.hpp  SpriteDatabaseJSONSerializer.cpp  SpriteDatabaseJSONSerializer.hpp  SpriteDatabaseLoader.cpp  SpriteDatabaseLoader.hpp  SpriteInstance.cpp  SpriteInstance.hpp  SpriteLibrary.cpp  (+36 more)
Engine/Nav/: NavBody.cpp  NavBody.hpp  NavBodyTransform.hpp  NavMesh.cpp  NavMesh.hpp  NavPath.cpp  NavPath.hpp  NavPathQuery.cpp  NavPathQuery.hpp  NavSystem.cpp  NavSystem.hpp  PathTypes.hpp  Pathfinder.cpp  Pathfinder.hpp  PathfinderDebug.cpp  PathfinderDebug.hpp  PathfinderListener.hpp
Engine/Objects/: entityevents.capnp  ovtypes.capnp
Engine/Path/: NavMesh.hpp  NavPath.cpp  NavPath.hpp  NavPathQuery.cpp  NavPathQuery.hpp  NavPathQueryPool.cpp  NavPathQueryPool.hpp  PathTypes.cpp  PathTypes.hpp  Pathfinder.cpp  Pathfinder.hpp  PathfinderDebug.cpp  PathfinderDebug.hpp  RecastContext.cpp  RecastContext.hpp  RecastMesh.cpp  RecastMesh.hpp
Engine/Physics/: Scene.cpp  Scene.hpp  SceneComponent.cpp  SceneDataContext.cpp  SceneDataContext.hpp  SceneDebugDrawer.cpp  SceneDebugDrawer.hpp  SceneFixedBodyHull.hpp  SceneMotionState.hpp  SceneObjectJsonLoader.hpp  SceneTypes.cpp  SceneTypes.hpp
Engine/Render/: BitmapAtlas.cpp  BitmapAtlas.hpp  BitmapAtlasLoader.cpp  BitmapAtlasLoader.hpp  BitmapLibrary.cpp  BitmapLibrary.hpp  Camera.cpp  Font.cpp  Font.hpp  FontLibrary.cpp  FontLibrary.hpp  RenderComponentFactory.cpp  RenderComponentFactory.hpp  RenderComponents.cpp  RenderContext.hpp  RenderDebug.hpp  RenderDefines.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraph.inl  RenderScene.cpp  RenderScene.hpp  (+8 more)
Graphics/: BitmapAtlas.cpp  BitmapAtlas.hpp  BitmapAtlasLoader.cpp  BitmapAtlasLoader.hpp  BitmapLibrary.cpp  BitmapLibrary.hpp  CMakeLists.txt  Font.cpp  Font.hpp  FontLibrary.cpp  FontLibrary.hpp  Graphics2D.cpp  Graphics2D.hpp  JSON.hpp  Mesh.hpp  Rect.hpp  RenderDebug.hpp  RenderDefines.hpp  RenderTypes.hpp  RenderUtils.hpp  Renderer.cpp  Renderer.hpp  RendererCLI.hpp  Style.hpp  Stylus.cpp  Texture.hpp
Rocket/: CMakeLists.txt
UI/: CMakeLists.txt  IMGUIClient.hpp  IMGUIFrame.cpp  IMGUIFrame.hpp  IMGUIGfx.cpp  IMGUIGfx.hpp  IMGUITypes.hpp
cinek/: .gitignore  CMakeLists.txt  allocator.cpp  allocator.hpp  buffer.hpp  circular_queue.hpp  ckdefs.h  cstringstack.cpp  cstringstack.hpp  debug.cpp  debug.hpp  file.cpp  file.hpp  filestreambuf.cpp  filestreambuf.hpp  intrusive_list.hpp  job.hpp  jobqueue.cpp  jobqueue.hpp  jobscheduler.cpp  jobscheduler.hpp  map.hpp  memorypool.hpp  memoryregion.hpp  memorystack.cpp  memorystack.hpp  modules.txt  objectheap.hpp  objectpool.hpp  objectstack.hpp  poolallocator.hpp  rendertypes.h  string.cpp  string.hpp  task.cpp  task.hpp  taskscheduler.cpp  taskscheduler.hpp  types.cpp  types.hpp  (+4 more)
(+790 files in other folders)
